Add own logo, add author in package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "three-js-tutorial",
   "version": "0.1.0",
+  "author": "Adam Konopka adamdev.it",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
